--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "1632773846529.jpg"
   name             : "P. Carmel Marie Frédérique"
   pronouns         : "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
