--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
 
   # Academic websites
   academia         : # URL
-  arxiv            : https://arxiv.org/user/
+  arxiv            : "https://arxiv.org/user/"
   googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : carmel-zagré
+  linkedin         : "carmel-zagré"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
