--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,23 +8,27 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
+- title: "CV/Resume"
+  url: /cv/
 
-  - title: "Talks"
-    url: /talks/    
+- title: "Portfolio"
+  url: /portfolio/
 
-  - title: "Teaching"
-    url: /teaching/    
+- title: "Teaching"
+  url: /teaching/   
     
-  - title: "Portfolio"
-    url: /portfolio/
+- title: "Research"
+  url: /publications/
+
+ # - title: "Talks"
+   # url: /talks/    
+
+
         
-  - title: "Blog Posts"
-    url: /year-archive/
+#- title: "Blog Posts"
+    #url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+
     
   # - title: "CV"
   #   url: /cv-json/
